// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header While a user is logged in should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    clearAccessToken={[Function]}
    logOutUser={[Function]}
    loggedIn={true}
    user={
        Object {
            "id": "lxbndr",
            "name": "Alex",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <header>
        <Link
                replace={false}
                to="/"
        >
                <h1>
                        Step to the Beat
                </h1>
        </Link>
        <div>
                <p>
                        Welcome, 
                        Alex
                        !
                </p>
                <p
                        className="log-out"
                        onClick={[Function]}
                >
                        Log Out
                </p>
        </div>
</header>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/"
>
            <h1>
                        Step to the Beat
            </h1>
</Link>,
          <div>
            <p>
                        Welcome, 
                        Alex
                        !
            </p>
            <p
                        className="log-out"
                        onClick={[Function]}
            >
                        Log Out
            </p>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1>
              Step to the Beat
</h1>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Step to the Beat",
            },
            "ref": null,
            "rendered": "Step to the Beat",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Welcome, 
                Alex
                !
</p>,
              <p
                className="log-out"
                onClick={[Function]}
>
                Log Out
</p>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Welcome, ",
                  "Alex",
                  "!",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Welcome, ",
                "Alex",
                "!",
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Log Out",
                "className": "log-out",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Log Out",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "header",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <header>
          <Link
                    replace={false}
                    to="/"
          >
                    <h1>
                              Step to the Beat
                    </h1>
          </Link>
          <div>
                    <p>
                              Welcome, 
                              Alex
                              !
                    </p>
                    <p
                              className="log-out"
                              onClick={[Function]}
                    >
                              Log Out
                    </p>
          </div>
</header>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              replace={false}
              to="/"
>
              <h1>
                            Step to the Beat
              </h1>
</Link>,
            <div>
              <p>
                            Welcome, 
                            Alex
                            !
              </p>
              <p
                            className="log-out"
                            onClick={[Function]}
              >
                            Log Out
              </p>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <h1>
                Step to the Beat
</h1>,
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Step to the Beat",
              },
              "ref": null,
              "rendered": "Step to the Beat",
              "type": "h1",
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p>
                  Welcome, 
                  Alex
                  !
</p>,
                <p
                  className="log-out"
                  onClick={[Function]}
>
                  Log Out
</p>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Welcome, ",
                    "Alex",
                    "!",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Welcome, ",
                  "Alex",
                  "!",
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Log Out",
                  "className": "log-out",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Log Out",
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "header",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header While a user is logged in userGreeting should match the snapshot if a user is logged in 1`] = `
<div>
  <p>
    Welcome, 
    Alex
    !
  </p>
  <p
    className="log-out"
    onClick={[Function]}
  >
    Log Out
  </p>
</div>
`;

exports[`Header While a user is not logged in should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    clearAccessToken={[Function]}
    logOutUser={[Function]}
    loggedIn={false}
    user={
        Object {
            "id": "lxbndr",
            "name": "Alex",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <header>
        <Link
                replace={false}
                to="/"
        >
                <h1>
                        Step to the Beat
                </h1>
        </Link>
</header>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/"
>
            <h1>
                        Step to the Beat
            </h1>
</Link>,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1>
              Step to the Beat
</h1>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Step to the Beat",
            },
            "ref": null,
            "rendered": "Step to the Beat",
            "type": "h1",
          },
          "type": [Function],
        },
        undefined,
      ],
      "type": "header",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <header>
          <Link
                    replace={false}
                    to="/"
          >
                    <h1>
                              Step to the Beat
                    </h1>
          </Link>
</header>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              replace={false}
              to="/"
>
              <h1>
                            Step to the Beat
              </h1>
</Link>,
            undefined,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <h1>
                Step to the Beat
</h1>,
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Step to the Beat",
              },
              "ref": null,
              "rendered": "Step to the Beat",
              "type": "h1",
            },
            "type": [Function],
          },
          undefined,
        ],
        "type": "header",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
